                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 30-06-2006 changed: a toast message is displayed if last.fm username/password is wrong
 - 30-06-2006 added: visible condition Weather.IsFetched, is true if the weather data is downloaded
 - 30-06-2006 fixed: smb shares with special chars (spaces, %..) in them would fail to use correct authentication information when opening files.
 - 29-06-2006 fixed: While scanning, tag reading and remote thumb lookup was enabled in My Music Files.
 - 29-06-2006 fixed: shortcuts in my programs misbehaved slightly.
 - 28-06-2006 fixed: XLink Kai crash on load.
 - 28-06-2006 added: builtin command skin.theme. cycles skin themes (skin.theme(-1) to go backwards). skin label "skin.currenttheme". themes are now at the mercy of the skinner.
 - 28-06-2006 added: AIFF codec to paplayer.
 - 28-06-2006 fixed: Editing of text containing UTF8 character codes could cause crashes.
 - 28-06-2006 fixed: Listcontrol could sometimes truncate one character when not scrolling the selected item.
 - 26-06-2006 fixed: "Query Info For All Albums" accessible in files & library. Now Playing is now fully accessible at the bottom of context menus.
                             Item count fixed and a check for * all items and parent folder implemented.
                             Also localized a few of the strings.
 - 26-06-2006 updated: Dutch language file (Thnx to nightspirit)
 - 26-06-2006 updated: Chinese (Simple) language file (Thnx to omenpica)
 - 26-06-2006 updated: Russian language file (Thnx to que_)
 - 26-06-2006 updated: Norwegian language file (Thnx to vnm)
 - 26-06-2006 changed: cddb info is displayed even if tag reading is disabled